tests/fixtures/invalid/none_rshift_bool.py
# Cannot right shift None and Bool
x: None = None >> True
